--- a/style.css
+++ b/style.css
@@ -27,12 +27,20 @@ html {
   width: 100%;
   height: 50%;
 }
-.product-image {
+.img {
+  background-image: url(./images/image-product-desktop.jpg);
   border-top-left-radius: 11px;
   border-bottom-left-radius: 11px;
-  /* height: 54%; */
-  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
+/* .product-image {
+  border-top-left-radius: 11px;
+  border-bottom-left-radius: 11px;
+  height: 54%;
+  width: 100%;
+} */
 .main-content {
   padding: 4rem;
 }
@@ -106,10 +114,13 @@ footer {
   html {
     font-size: 52%;
   }
+  /* .grid {
+    width: 20rem;
+  } */
   .section-grid {
     padding: 5px 5px 5px 5px;
   }
-  .product-image {
+  .img {
     /* height: 250px; */
 
     border-top-right-radius: 0;
@@ -147,11 +158,14 @@ footer {
   .main-content {
     padding: 2rem;
   }
-  .product-image {
+  .img {
     grid-row: 1;
-    height: 250px;
+    height: 35rem;
     border-top-right-radius: 11px;
     border-bottom-left-radius: 0;
+  }
+  button {
+    margin-top: 7rem;
   }
 }
 @media (max-width: 23.43em) {
@@ -168,9 +182,9 @@ footer {
   .main-content {
     padding: 1.4rem;
   }
-  .product-image {
+  .img {
     grid-row: 1;
-    height: 250px;
+    height: 35rem;
     border-top-right-radius: 11px;
     border-bottom-left-radius: 0;
   }
@@ -194,5 +208,9 @@ footer {
   }
   footer {
     font-size: 2rem;
+  }
+  button {
+    margin-top: 6rem;
+    margin-bottom: 3rem;
   }
 }
